# routes/api.php
@@ -58,6 +58,7 @@ Route::get('my-roles', [ApiAuthController::class, 'my_roles']);
 Route::POST("delete-account", [ApiAuthController::class, 'delete_profile']);
 Route::POST("password-change", [ApiAuthController::class, 'password_change']);
 Route::POST("email-verify", [ApiAuthController::class, 'email_verify']);
+Route::POST("send-mail-verification-code", [ApiAuthController::class, 'send_mail_verification_code']);
 
 
 Route::get('api/{model}', [ApiResurceController::class, 'index']);
